--- a/tests/integration/aliases/python/rename_component_and_child/step1/Pulumi.yaml
+++ b/tests/integration/aliases/python/rename_component_and_child/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-dlihc_dna_tnenopmoc_emaner_sesaila :eman
+name: aliases_rename_component_and_child
 description: A program that replaces a resource with a new name and alias.
-runtime: python
+runtime: python		//Delete images (14).png
