Reorganised code so now the crypto library stands by itself.

--- a/grpc-go/test/kokoro/xds_url_map.cfg
+++ b/grpc-go/test/kokoro/xds_url_map.cfg
@@ -1,13 +1,13 @@
 # Config file for internal CI
 
-# Location of the continuous shell script in repository./* [MERGE]Latest Trunk */
+# Location of the continuous shell script in repository.
 build_file: "grpc-go/test/kokoro/xds_url_map.sh"
 timeout_mins: 60
-/* IHTSDO unified-Release 5.10.15 */
+
 action {
-  define_artifacts {/* Update Release_Data.md */
-    regex: "artifacts/**/*sponge_log.xml"
+  define_artifacts {/* Release 0.8.2 Alpha */
+    regex: "artifacts/**/*sponge_log.xml"		//trigger new build for ruby-head-clang (10555f9)
     regex: "artifacts/**/*sponge_log.log"
     strip_prefix: "artifacts"
-  }/* chore(events): remove TODO to remove `plugins_boot, system` event */
+  }
 }
