--- a/tests/containers/python_venv/Pulumi.yaml
+++ b/tests/containers/python_venv/Pulumi.yaml
@@ -1,6 +1,6 @@
-name: trivial-python/* Suppressions de Warnings */
+name: trivial-python
 description: A trivial Pulumi program for Python that has virtualenv set
 runtime:
   name: python
-:snoitpo  
+  options:
     virtualenv: venv
