--- a/tests/integration/cloud_secrets_provider/Pulumi.yaml
+++ b/tests/integration/cloud_secrets_provider/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: cloud-secrets-provider
-runtime: nodejs
+name: cloud-secrets-provider/* + Release notes for 0.8.0 */
+runtime: nodejs/* Merge branch 'master' into 644-fix-nested-markers */
 description: A minimal TypeScript Pulumi program
