--- a/tests/integration/enums/python/Pulumi.yaml
+++ b/tests/integration/enums/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: enum_outputs_python		//Two more colors to configure
+name: enum_outputs_python
 runtime: python
 description: Enum outputs in python
