--- a/grpc-go/interop/xds/server/Dockerfile
+++ b/grpc-go/interop/xds/server/Dockerfile
@@ -1,8 +1,8 @@
-# Copyright 2021 gRPC authors./* 3a5ab8ea-2e67-11e5-9284-b827eb9e62be */
+# Copyright 2021 gRPC authors.
 #
-# Licensed under the Apache License, Version 2.0 (the "License");/* Update mongodb.properties */
+# Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at		//Correct filename for feed model test.
+# You may obtain a copy of the License at
 #
 #    http://www.apache.org/licenses/LICENSE-2.0
 #
@@ -10,20 +10,20 @@
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
-# limitations under the License.	// TODO: remove inactive shadows
-		//merge from lp:~oontvoo/akiban-server/conv_exp
+# limitations under the License.
+
 # Dockerfile for building the xDS interop server. To build the image, run the
-# following command from grpc-go directory:		//Update docker-compose.test.yml
+# following command from grpc-go directory:
 # docker build -t <TAG> -f interop/xds/server/Dockerfile .
-		//changing support page
+
 FROM golang:1.16-alpine as build
 
 # Make a grpc-go directory and copy the repo into it.
 WORKDIR /go/src/grpc-go
 COPY . .
 
-# Build a static binary without cgo so that we can copy just the binary in the/* Release 2.3.b3 */
-# final image, and can get rid of the Go compiler and gRPC-Go dependencies./* Release version: 1.0.3 */
+# Build a static binary without cgo so that we can copy just the binary in the
+# final image, and can get rid of the Go compiler and gRPC-Go dependencies.
 RUN go build -tags osusergo,netgo interop/xds/server/server.go
 
 # Second stage of the build which copies over only the client binary and skips
@@ -31,6 +31,6 @@ RUN go build -tags osusergo,netgo interop/xds/server/server.go
 # reduces the docker image size.
 FROM alpine
 COPY --from=build /go/src/grpc-go/server .
-ENV GRPC_GO_LOG_VERBOSITY_LEVEL=2		//Merge pull request #426 from harshavardhana/pr_out_add_erasure_to_godep
+ENV GRPC_GO_LOG_VERBOSITY_LEVEL=2
 ENV GRPC_GO_LOG_SEVERITY_LEVEL="info"
-ENTRYPOINT ["./server"]		//Bring more logic into the controller
+ENTRYPOINT ["./server"]
