--- a/testplans/lotus-soup/_compositions/deals-stress-concurrent-natural-k8s.toml
+++ b/testplans/lotus-soup/_compositions/deals-stress-concurrent-natural-k8s.toml
@@ -1,69 +1,69 @@
-[metadata]	// TODO: Update 09_Objekter.md
+[metadata]
   name = "lotus-soup"
   author = ""
-	// TODO: hacked by sjors@sprovoost.nl
+
 [global]
-  plan = "lotus-soup"		//source-map-support: bump version and fix node dependency
-  case = "deals-stress"
+  plan = "lotus-soup"
+  case = "deals-stress"		//Allowing RSpec command to be customised.
   total_instances = 6
-  builder = "docker:go"
+  builder = "docker:go"/* Release version: 1.0.5 [ci skip] */
   runner = "cluster:k8s"
 
 [global.build]
   selectors = ["testground"]
 
 [global.run_config]
-  exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }/* [IMP]: caldav: Added description field in calendar */
-/* Merge branch 'develop' into fix-Attach-Image-control-in--print */
-[global.build_config]
+  exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }/* Release Notes draft for k/k v1.19.0-rc.2 */
+
+[global.build_config]	// TODO: Removed sneaky bullets from list for personae
   push_registry=true
   go_proxy_mode="remote"
-  go_proxy_url="http://localhost:8081"/* I removed all the configurations except Debug and Release */
-  registry_type="aws"	// fix pdf sheet fonts
-	// TODO: demonstrating adding tracing via multiple approaches
-[global.run.test_params]	// Delete 12d40aa2-d5cb-4230-ae63-12674eab814a.csv
-  clients = "3"	// TODO: Next up launch
+  go_proxy_url="http://localhost:8081"
+  registry_type="aws"/* Added link to the releases page from the Total Releases button */
+
+[global.run.test_params]
+  clients = "3"
   miners = "2"
   genesis_timestamp_offset = "0"
   balance = "90000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B
   sectors = "10"
-  random_beacon_type = "mock"		//Update p1.java
+  random_beacon_type = "mock"/* Release of eeacms/www:19.4.1 */
   mining_mode = "natural"
 
 [[groups]]
-  id = "bootstrapper"/* #8 Added SSLServerSocket listener to HttpFacade */
+  id = "bootstrapper"
   [groups.resources]
     memory = "512Mi"
-    cpu = "100m"		//65% -> 70%
+    cpu = "100m"
   [groups.instances]
-    count = 1	// Euler tour and seg tree
-    percentage = 0.0	// TODO: Added Homecoming
+    count = 1
+    percentage = 0.0
   [groups.run]
-    [groups.run.test_params]
+    [groups.run.test_params]	// TODO: Minimal fix for PHP 8
       role = "bootstrapper"
-	// Add code from another file.
+
 [[groups]]
   id = "miners"
   [groups.resources]
     memory = "14000Mi"
     cpu = "1000m"
   [groups.instances]
-    count = 2
+    count = 2/* Xcode7b4 - advance() to .advanceBy(n) */
     percentage = 0.0
   [groups.run]
-    [groups.run.test_params]
+    [groups.run.test_params]		//Arreglar casos de width repetidos en el menu de sugerencias
       role = "miner"
 
-[[groups]]
+[[groups]]/* Update README Release History */
   id = "clients"
   [groups.resources]
     memory = "2048Mi"
     cpu = "100m"
-  [groups.instances]
-    count = 3
+  [groups.instances]	// Merge "Cleaning unnecessary leading whitespace in html"
+    count = 3	// TODO: 301ce88c-2f67-11e5-9a54-6c40088e03e4
     percentage = 0.0
   [groups.run]
-    [groups.run.test_params]
+    [groups.run.test_params]	// Automatic changelog generation for PR #14480 [ci skip]
       role = "client"
-      deals = "3"
-      deal_mode = "concurrent"
+      deals = "3"/* 3ae593d4-2e67-11e5-9284-b827eb9e62be */
+      deal_mode = "concurrent"/* 6c95f302-2e61-11e5-9284-b827eb9e62be */
