--- a/tests/examples/secrets/Pulumi.yaml
+++ b/tests/examples/secrets/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: secrets-dynamic
-runtime: nodejs
+runtime: nodejs		//added compiled library
 description: A small example that uses our secrets support.
