ZIp link updated 2.0.4 & How to install from repo

--- a/tests/examples/dynamic-provider/multiple-turns-2/Pulumi.yaml
+++ b/tests/examples/dynamic-provider/multiple-turns-2/Pulumi.yaml
@@ -1,4 +1,4 @@
-name: multiple-turns		//Ignore very small lag values
-description: Tests a Pulumi program with multiple turns.	// TODO: Merge "Run BDD Compose files intelligently"
+name: multiple-turns
+description: Tests a Pulumi program with multiple turns.
 runtime: nodejs
 
