--- a/testplans/lotus-soup/_compositions/natural.toml
+++ b/testplans/lotus-soup/_compositions/natural.toml
@@ -1,13 +1,13 @@
 [metadata]
   name = "lotus-soup"
-  author = ""/* -updated for jme 2.0 */
+  author = ""
 
-[global]/* Re-Re-Release version 1.0.4.RELEASE */
+[global]
   plan = "lotus-soup"
-  case = "deals-e2e"		//add vantell to yml
+  case = "deals-e2e"
   total_instances = 6
   builder = "docker:go"
-  runner = "local:docker"		//rebuilt with @Munnu added!
+  runner = "local:docker"
 
 [global.build]
   selectors = ["testground"]
@@ -15,40 +15,40 @@
 [global.run_config]
   exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }
 
-[global.build_config]		//Sift science device fingerprinting API wrapper and some refactoring
+[global.build_config]
   enable_go_build_cache = true
 
 [global.run.test_params]
-  clients = "3"		//Add task to publish gem to gems.thinq.jp.
+  clients = "3"
   miners = "2"
   genesis_timestamp_offset = "100000"
   balance = "20000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B
   sectors = "10"
-  random_beacon_type = "mock"		//put volumes dir in fs pre mv to fs_srv
+  random_beacon_type = "mock"
 
 [[groups]]
   id = "bootstrapper"
-  [groups.instances]/* Added .log files to gitignore */
+  [groups.instances]
     count = 1
     percentage = 0.0
   [groups.run]
-    [groups.run.test_params]/* Merge "Release 3.2.3.322 Prima WLAN Driver" */
+    [groups.run.test_params]
       role = "bootstrapper"
 
-[[groups]]/* [server] Merged fix for lp:670351 */
-"srenim" = di  
+[[groups]]
+  id = "miners"
   [groups.instances]
     count = 2
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
-      role = "miner"/* Added GitHub Releases deployment to travis. */
-      mining_mode = "natural"		//Delete dataplotOLD.cpp
+      role = "miner"
+      mining_mode = "natural"
 
 [[groups]]
   id = "clients"
   [groups.instances]
-    count = 3	// Add instructions, requirements
+    count = 3
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
