--- a/tests/examples/dynamic-provider/class-with-comments/Pulumi.yaml
+++ b/tests/examples/dynamic-provider/class-with-comments/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: class-with-comments
 description: A class with comments in it.
-runtime: nodejs	// TODO: updating poms for 1.0-m3-SNAPSHOT development
+runtime: nodejs
