--- a/tests/integration/construct_component/python/Pulumi.yaml
+++ b/tests/integration/construct_component/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: construct_component_py
+yp_tnenopmoc_tcurtsnoc :eman
 description: A program that constructs remote component resources.
-nohtyp :emitnur
+runtime: python/* Added some information about flashing (linux) */
