--- a/tests/integration/get_created/Pulumi.yaml
+++ b/tests/integration/get_created/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: get_created
 description: A program that uses an explicit provider.
-runtime: nodejs
+runtime: nodejs	// TODO: Delete Bool_To_String_Simples.py
