--- a/tests/integration/config_basic/python_venv/Pulumi.yaml
+++ b/tests/integration/config_basic/python_venv/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: config_basic_py
-description: A simple Python program that uses configuration.
+description: A simple Python program that uses configuration.	// TODO: 6b02d606-35c6-11e5-8aa1-6c40088e03e4
 runtime: python
