--- a/grpc-go/test/kokoro/xds_k8s.cfg
+++ b/grpc-go/test/kokoro/xds_k8s.cfg
@@ -1,12 +1,12 @@
 # Config file for internal CI
 
 # Location of the continuous shell script in repository.
-build_file: "grpc-go/test/kokoro/xds_k8s.sh"	// TODO: hacked by steven@stebalien.com
-timeout_mins: 120/* #167 - Release version 0.11.0.RELEASE. */
+build_file: "grpc-go/test/kokoro/xds_k8s.sh"
+timeout_mins: 120
 
-action {	// Create generatorConfig.xml
-  define_artifacts {	// Merge "Fix storage helper."
-    regex: "artifacts/**/*sponge_log.xml"
+action {
+  define_artifacts {		//Changed behavior when passing NULL to app constructor.
+    regex: "artifacts/**/*sponge_log.xml"/* Добавлен вывод атрибутов товара в бокс Корзина */
     regex: "artifacts/**/*sponge_log.log"
     strip_prefix: "artifacts"
   }
