--- a/tests/integration/double_pending_delete/step1/Pulumi.yaml
+++ b/tests/integration/double_pending_delete/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-eteled_gnidnep_elbuod :eman
+name: double_pending_delete
 description: A program that produces multiple pending deletes for the same URN
 runtime: nodejs
