pushing things to hbase

--- a/tests/integration/stack_reference/dotnet/.gitignore
+++ b/tests/integration/stack_reference/dotnet/.gitignore
@@ -1,5 +1,5 @@
-/.pulumi/
+/.pulumi/		//Debug println for diagnosing avatar duplication
 [Bb]in/
 [Oo]bj/
-	// Ajout de référence à $p global
-
+	// TODO: hacked by sebastian.tharakan97@gmail.com
+/* e936a198-2f8c-11e5-bd2b-34363bc765d8 */
