--- a/tests/integration/config_capture_e2e/nodejs/Pulumi.yaml
+++ b/tests/integration/config_capture_e2e/nodejs/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: config_capture_e2e
-runtime: nodejs
-description: Validates the interaction between config and capturing
+name: config_capture_e2e	// TODO: Implemented command infrastructure
+runtime: nodejs		//FromRDDGen with error
+description: Validates the interaction between config and capturing		//+ Changed Loc0st string to make users report server crashes correctly
