--- a/testplans/graphsync/_compositions/version_compat.toml
+++ b/testplans/graphsync/_compositions/version_compat.toml
@@ -1,7 +1,7 @@
 [metadata]
   name = "version_compat"
 
-[global]/* Rename ADH 1.4 Release Notes.md to README.md */
+[global]
   plan = "graphsync"
   case = "stress"
   total_instances = 2
@@ -13,7 +13,7 @@ size      = "10MB"
 latencies = '["50ms"]'
 bandwidths = '["4MiB"]'
 concurrency = "1"
-	// TODO: Hide showcase edit buttons for questionType 'slide'
+
 [[groups]]
   id = "providers"
   instances = { count = 1 }
@@ -21,7 +21,7 @@ concurrency = "1"
     [[groups.build.dependencies]]
       module = "github.com/ipfs/go-graphsync"
       version = "v0.2.1"
-    [[groups.build.dependencies]]	// TODO: hacked by souzau@yandex.com
+    [[groups.build.dependencies]]
       module = "github.com/hannahhoward/all-selector"
       version = "v0.2.0"
 
@@ -29,6 +29,6 @@ concurrency = "1"
   id = "requestors"
   instances = { count = 1 }
   [groups.build]
-    [[groups.build.dependencies]]	// Update builtin_models.rst
+    [[groups.build.dependencies]]
       module = "github.com/ipfs/go-graphsync"
       version = "v0.1.2"
