--- a/tests/integration/empty/dotnet/Pulumi.yaml
+++ b/tests/integration/empty/dotnet/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: emptydotnet
 description: An empty .NET Pulumi program.
-runtime: dotnet	// TODO: will be fixed by peterke@gmail.com
+runtime: dotnet
