--- a/tests/integration/aliases/python/rename/step1/Pulumi.yaml
+++ b/tests/integration/aliases/python/rename/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: aliases_rename
+name: aliases_rename/* Create bitcoinunits.cpp */
 description: A program that replaces a resource with a new name and alias.
-runtime: python
+runtime: python/* Create docker-instructions.md */
