--- a/tests/integration/custom_timeouts/python/failure/Pulumi.yaml
+++ b/tests/integration/custom_timeouts/python/failure/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: custom_timeouts
 description: A program that instantiates a resource with a custom timeout
-runtime: python/* Add description of what the exercises are about */
+runtime: python
