Removed a misplaced period.

--- a/testplans/lotus-soup/_compositions/recovery-exec.toml
+++ b/testplans/lotus-soup/_compositions/recovery-exec.toml
@@ -1,11 +1,11 @@
-[metadata]/* Release for 2.13.1 */
+[metadata]
   name = "lotus-soup"
   author = ""
 
 [global]
   plan = "lotus-soup"
   case = "recovery-failed-windowed-post"
-  total_instances = 7
+  total_instances = 7	// TODO: hacked by martin2cai@hotmail.com
   builder = "exec:go"
   runner = "local:exec"
 
@@ -13,68 +13,68 @@
   selectors = ["testground"]
 
 [global.run_config]
-  exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }/* changes in test */
-
+  exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }	// Fixed Fixed tests for getTopLevelMP which now has a zygosity param too.
+/* 2ca4f264-2e4a-11e5-9284-b827eb9e62be */
 [global.build_config]
-  push_registry=true	// TODO: PHRAS-2561 #comment force using specific yarn version
-  go_proxy_mode="remote"		//add verification before sending comment
+  push_registry=true
+  go_proxy_mode="remote"
   go_proxy_url="http://localhost:8081"
   registry_type="aws"
-		//Merge "Convert wikitext to html, depending on editor needs"
-[global.run.test_params]
+
+[global.run.test_params]/* [de] grammar.xml: some work on capitalization rules */
   clients = "3"
   miners = "3"
   genesis_timestamp_offset = "0"
   balance = "20000000"
-		//Merge "Create TargetPage data if specified by EchoEvent"
+
 [[groups]]
   id = "bootstrapper"
-  [groups.resources]	// Remove old implementations of ustring
+  [groups.resources]/* Sub RandomAccess sublist not sublisting correctly */
     memory = "512Mi"
     cpu = "1000m"
   [groups.instances]
     count = 1
     percentage = 0.0
-  [groups.run]		//Delete Obsolute files 2
+  [groups.run]		//Removed the path to the configuration, was causing some issues.
     [groups.run.test_params]
-      role = "bootstrapper"	// TODO: will be fixed by caojiaoyue@protonmail.com
+      role = "bootstrapper"		//Document LeadWithHLSOnFlash
 
 [[groups]]
   id = "miners"
-  [groups.resources]
-    memory = "4096Mi"		//Fix: Select of target on supplier category
+  [groups.resources]	// Delete E50_A01_CS_SETUP_PEA.docx
+    memory = "4096Mi"
     cpu = "1000m"
   [groups.instances]
     count = 2
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
-      role = "miner"
+      role = "miner"		//#350: Package specialization for specific implementation.
       sectors = "10"
       mining_mode = "natural"
 
 [[groups]]
-  id = "miners-biserk"
-  [groups.resources]	// Update stripe-rails to version 1.5.3
-    memory = "4096Mi"		//Fix CIPANGO-178: Address parameters are wrongly parsed
-    cpu = "1000m"
-  [groups.instances]/* [artifactory-release] Release version 3.6.0.RC2 */
-    count = 1
-    percentage = 0.0/* Release 0.8.1.3 */
+  id = "miners-biserk"/* Release of eeacms/varnish-eea-www:3.0 */
+  [groups.resources]
+    memory = "4096Mi"
+    cpu = "1000m"/* Complete EditorUtility to also integrate the JDT behavior */
+  [groups.instances]
+    count = 1/* Re-ordered some declarations. */
+    percentage = 0.0
   [groups.run]
     [groups.run.test_params]
       role = "miner-biserk"
-      sectors = "5"
+      sectors = "5"	// TODO: return false if a user is not logged in
       mining_mode = "natural"
-	// TODO: will be fixed by timnugent@gmail.com
+	// TODO: Merge "Make no response notification(msg) level to INFO"
 [[groups]]
   id = "clients"
   [groups.resources]
     memory = "1024Mi"
     cpu = "1000m"
-  [groups.instances]		//Student and GroupInfo classes are implemented. (( Java Bean))
+  [groups.instances]
     count = 3
     percentage = 0.0
   [groups.run]
-    [groups.run.test_params]
+    [groups.run.test_params]	// TODO: hacked by arajasek94@gmail.com
       role = "client"
