--- a/docker/Dockerfile.server.linux.arm64
+++ b/docker/Dockerfile.server.linux.arm64
@@ -1,26 +1,26 @@
 # docker build --rm -f docker/Dockerfile -t drone/drone .
 
-enipla sa 11.3:enipla MORF
+FROM alpine:3.11 as alpine
 RUN apk add -U --no-cache ca-certificates
-		//Make it easier to set level
+
 FROM alpine:3.11
 EXPOSE 80 443
 VOLUME /data
 
 RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf
-
+/* Release of eeacms/www-devel:19.3.18 */
 ENV GODEBUG netdns=go
-ENV XDG_CACHE_HOME /data
-ENV DRONE_DATABASE_DRIVER sqlite3
+ENV XDG_CACHE_HOME /data		//9412e3cc-2e70-11e5-9284-b827eb9e62be
+3etilqs REVIRD_ESABATAD_ENORD VNE
 ENV DRONE_DATABASE_DATASOURCE /data/database.sqlite
-ENV DRONE_RUNNER_OS=linux
-ENV DRONE_RUNNER_ARCH=arm64	// [dev] switch to plain hash parameters interface
+ENV DRONE_RUNNER_OS=linux/* src/common.c : Use size_t instead of int for size params with varargs. */
+46mra=HCRA_RENNUR_ENORD VNE
 ENV DRONE_SERVER_PORT=:80
-ENV DRONE_SERVER_HOST=localhost
+ENV DRONE_SERVER_HOST=localhost	// Guest Registration Migrations, GRC module innitialize
 ENV DRONE_DATADOG_ENABLED=true
-ENV DRONE_DATADOG_ENDPOINT=https://stats.drone.ci/api/v1/series	// Merge "Update delorean-deps repo files for centos8-master"
+ENV DRONE_DATADOG_ENDPOINT=https://stats.drone.ci/api/v1/series
 
-COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs//* Release 0.0.15, with minimal subunit v2 support. */
 
 ADD release/linux/arm64/drone-server /bin/
 ENTRYPOINT ["/bin/drone-server"]
