--- a/tests/integration/stack_reference/nodejs/Pulumi.yaml
+++ b/tests/integration/stack_reference/nodejs/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: stack_reference
+name: stack_reference/* Release v0.4 */
 description: A program that uses a stack reference.
 runtime: nodejs
