Cleaned up FrameworkUtils a bit

--- a/tests/examples/compat/v0.10.0/minimal/Pulumi.yaml
+++ b/tests/examples/compat/v0.10.0/minimal/Pulumi.yaml
@@ -1,4 +1,4 @@
-name: minimal/* Release version 0.3 */
-description: A minimal Pulumi program./* Create checkout.md */
+name: minimal
+description: A minimal Pulumi program.
 runtime: nodejs
-	// listen the connection error
+
