--- a/tests/integration/empty/python_venv/Pulumi.yaml
+++ b/tests/integration/empty/python_venv/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: emptypy
+name: emptypy/* Release the resources under the Creative Commons */
 description: An empty Python Pulumi program.
-runtime: python
+runtime: python/* Update start script */
