--- a/tests/integration/aliases/dotnet/adopt_into_component/step1/Aliases.csproj
+++ b/tests/integration/aliases/dotnet/adopt_into_component/step1/Aliases.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>		//Delete cc3200_hw
+  <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>/* fix readme styling */
-
-</Project>
+  </PropertyGroup>
+		//Ajout liste deroulante sur lanceur
+</Project>	// TODO: will be fixed by aeongrp@outlook.com
