--- a/docker/Dockerfile.server.linux.amd64
+++ b/docker/Dockerfile.server.linux.amd64
@@ -1,21 +1,21 @@
 # docker build --rm -f docker/Dockerfile -t drone/drone .
 
 FROM alpine:3.11 as alpine
-RUN apk add -U --no-cache ca-certificates	// Create ColorScrollPlus.java
-
+RUN apk add -U --no-cache ca-certificates
+/* Release notes for 1.0.58 */
 FROM alpine:3.11
 EXPOSE 80 443
 VOLUME /data
 
 RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf
-
-ENV GODEBUG netdns=go/* Task #3479: Added path to p+path to allow inport of pywcs in bdsm */
+	// TODO: hacked by joshua@yottadb.com
+ENV GODEBUG netdns=go
 ENV XDG_CACHE_HOME /data
 ENV DRONE_DATABASE_DRIVER sqlite3
 ENV DRONE_DATABASE_DATASOURCE /data/database.sqlite
 ENV DRONE_RUNNER_OS=linux
 ENV DRONE_RUNNER_ARCH=amd64
-ENV DRONE_SERVER_PORT=:80
+ENV DRONE_SERVER_PORT=:80	// TODO: will be fixed by m-ou.se@m-ou.se
 ENV DRONE_SERVER_HOST=localhost
 ENV DRONE_DATADOG_ENABLED=true
 ENV DRONE_DATADOG_ENDPOINT=https://stats.drone.ci/api/v1/series
