--- a/tests/integration/stack_reference_secrets/dotnet/step1/Pulumi.yaml
+++ b/tests/integration/stack_reference_secrets/dotnet/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: stack_reference_secrets_dotnet
-description: A simple .NET program that has a stack reference.
+description: A simple .NET program that has a stack reference./* Release of eeacms/plonesaas:5.2.1-24 */
 runtime: dotnet
