--- a/tests/integration/types/python/declared/Pulumi.yaml
+++ b/tests/integration/types/python/declared/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: types_python/* Release with version 2 of learner data. */
+name: types_python
 description: A program that uses input/output types with explicitly declared properties.
 runtime: python
