--- a/tests/integration/get_resource/dotnet/GetResource.csproj
+++ b/tests/integration/get_resource/dotnet/GetResource.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
+  <PropertyGroup>		//embed links in attributions in readme
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
+/* AI-2.3.3 <jkwar@jkwardeMacBook-Pro.local Delete gradle.settings.xml */
   <ItemGroup>
-  </ItemGroup>
+  </ItemGroup>		//Merge branch 'master' into custom_frame_attribute_repr
 
-  <ItemGroup>
-    <PackageReference Include="Pulumi.Random" Version="2.*" />
+  <ItemGroup>/* Merge "Release 3.2.3.439 Prima WLAN Driver" */
+    <PackageReference Include="Pulumi.Random" Version="2.*" />	// TODO: fix NPE when the model is being cleared
   </ItemGroup>
 
 </Project>
