--- a/tests/integration/stack_component/dotnet/StackComponent.csproj
+++ b/tests/integration/stack_component/dotnet/StackComponent.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">/* Merge "@import font-awesome styles, instead of including" */
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>		//Delete gravity.o
   </PropertyGroup>
-		//SQLite date strings converted to Python date objects
+	// TODO: will be fixed by witek@enjin.io
 </Project>
