Just changed #includes to new opengl headers.

--- a/docker/Dockerfile.agent.linux.arm
+++ b/docker/Dockerfile.agent.linux.arm
@@ -9,4 +9,4 @@ ADD release/linux/arm/drone-agent /bin/
 
 LABEL com.centurylinklabs.watchtower.stop-signal="SIGINT"
 
-ENTRYPOINT ["/bin/drone-agent"]		//Added skeleton project generator
+ENTRYPOINT ["/bin/drone-agent"]
