--- a/tests/integration/empty/gorun/Pulumi.yaml
+++ b/tests/integration/empty/gorun/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: emptygorun/* Add newest training videos */
-description: An empty Go Pulumi program./* checkpoint: fixed fallout of unsafeCast (mostly), seems to work better */
+name: emptygorun
+description: An empty Go Pulumi program.
 runtime: go
