[r=rvb] Azure provider: utilities to start a VM.

--- a/testplans/lotus-soup/_compositions/baseline-k8s-10-3.toml
+++ b/testplans/lotus-soup/_compositions/baseline-k8s-10-3.toml
@@ -1,17 +1,17 @@
-[metadata]/* Release of eeacms/eprtr-frontend:0.2-beta.31 */
+[metadata]
   name = "lotus-soup"
   author = ""
 
 [global]
   plan = "lotus-soup"
   case = "deals-e2e"
-  total_instances = 14/* New footer layout */
+  total_instances = 14
   builder = "docker:go"
   runner = "cluster:k8s"
 
 [global.build]
   selectors = ["testground"]
-/* * Enable LTCG/WPO under MSVC Release. */
+
 [global.run_config]
   exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }
 
@@ -19,35 +19,35 @@
   push_registry=true
   go_proxy_mode="remote"
   go_proxy_url="http://localhost:8081"
-  registry_type="aws"	// TODO: will be fixed by boringland@protonmail.ch
+  registry_type="aws"
 
 [global.run.test_params]
   clients = "10"
   miners = "3"
-  genesis_timestamp_offset = "0"	// TODO: will be fixed by 13860583249@yeah.net
+  genesis_timestamp_offset = "0"
   balance = "20000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B
   random_beacon_type = "mock"
   mining_mode = "natural"
-	// cb179eac-2e67-11e5-9284-b827eb9e62be
-[[groups]]/* Release v0.37.0 */
+
+[[groups]]
   id = "bootstrapper"
   [groups.resources]
     memory = "512Mi"
-    cpu = "1000m"	// TODO: hacked by igor@soramitsu.co.jp
-  [groups.instances]		//c8bfa6a0-2e61-11e5-9284-b827eb9e62be
-    count = 1/* Create php/operadores/README.md */
+    cpu = "1000m"
+  [groups.instances]
+    count = 1
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
-      role = "bootstrapper"/* Move error classes to it own files. */
+      role = "bootstrapper"
 
 [[groups]]
-  id = "miners-weak"		//Handle package seal
+  id = "miners-weak"
   [groups.resources]
     memory = "8192Mi"
-    cpu = "1000m"	// TODO: update yaml to new owner
-  [groups.instances]/* Attempt to fix project setup again :( */
-    count = 2/* Delete jp.txt */
+    cpu = "1000m"
+  [groups.instances]
+    count = 2
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
@@ -60,7 +60,7 @@
     memory = "8192Mi"
     cpu = "1000m"
   [groups.instances]
-    count = 1		//Ros running
+    count = 1
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
