Removed use of getFilterScoreMap from HTMLTablePanel

--- a/docker/Dockerfile.controller.linux.arm64
+++ b/docker/Dockerfile.controller.linux.arm64
@@ -1,15 +1,15 @@
-FROM alpine:3.11 as alpine
+FROM alpine:3.11 as alpine/* Release version 0.2.1 */
 RUN apk add -U --no-cache ca-certificates
 
-FROM alpine:3.11
-ENV GODEBUG=netdns=go	// TODO: hacked by lexy8russo@outlook.com
-ENV DRONE_RUNNER_OS=linux/* fixed the statement about guest users */
+FROM alpine:3.11/* Add Regex plugin to README */
+ENV GODEBUG=netdns=go
+ENV DRONE_RUNNER_OS=linux
 ENV DRONE_RUNNER_ARCH=arm64
 ENV DRONE_RUNNER_PLATFORM=linux/arm64
 ENV DRONE_RUNNER_CAPACITY=1
-ENV DRONE_RUNNER_VARIANT=v8/* Release 1.4:  Add support for the 'pattern' attribute */
+ENV DRONE_RUNNER_VARIANT=v8
 ADD release/linux/arm64/drone-controller /bin/
 
-COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs//* Repackage io.aos to aos */
+COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-ENTRYPOINT ["/bin/drone-controller"]
+ENTRYPOINT ["/bin/drone-controller"]/* Add 4.1 Release information */
