--- a/tests/integration/aliases/go/adopt_into_component/step1/Pulumi.yaml
+++ b/tests/integration/aliases/go/adopt_into_component/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: aliases_adopt_into_component/* Release 29.1.0 */
-description: A program that replaces a resource with a new name and alias./* Delete universal-works-sweater.jpg */
+name: aliases_adopt_into_component
+description: A program that replaces a resource with a new name and alias.
 runtime: go
